Fri Feb 13 20:42:13 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/Thrasher/DataReaderListenerImpl.h:
        * tests/DCPS/Thrasher/DataReaderListenerImpl.cpp:
        * tests/DCPS/Thrasher/ParticipantTask.h:
        * tests/DCPS/Thrasher/ParticipantTask.cpp:
        * tests/DCPS/Thrasher/ProgressIndicator.h:
        * tests/DCPS/Thrasher/ProgressIndicator.cpp:
        * tests/DCPS/Thrasher/Publisher.cpp:
        * tests/DCPS/Thrasher/Subscriber.cpp:
        * tests/DCPS/Thrasher/Thrasher.mpc:
        * tests/DCPS/Thrasher/publisher.ini:
        * tests/DCPS/Thrasher/run_test.pl:
        * tests/DCPS/Thrasher/tcp.conf:

          Next pass at Thrasher test.

        * tests/DCPS/Thrasher/subscriber.ini:

          Removed this file.

Fri Feb 13 05:37:18 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/Thrasher/DataReaderListenerImpl.h:
        * tests/DCPS/Thrasher/DataReaderListenerImpl.cpp:
        * tests/DCPS/Thrasher/Subscriber.cpp:
        * tests/DCPS/Thrasher/Thrasher.mpc:
        * tests/DCPS/Thrasher/publisher.ini:
        * tests/DCPS/Thrasher/subscriber.ini:

        Initial pass of the Thrasher DCPS stress test. This commit
        includes the subscribing side of the test.

Fri Feb 13 02:29:08 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/DCPS/Distributed/bin/run_test:

          Located the test executable relative to the $FindBin::Bin
          directory.

        * performance-tests/DCPS/Distributed/src/EntityProfiles.h:

          Defined configuration structures for all test configuration
          parameters defined in datamodel.

        * performance-tests/DCPS/Distributed/src/Exponential.h:
        * performance-tests/DCPS/Distributed/src/Exponential.cpp:
        * performance-tests/DCPS/Distributed/src/Gaussian.h:
        * performance-tests/DCPS/Distributed/src/Gaussian.cpp:

          Migrated and generalized statistical deviate generation from